📝 docs: update zenn article

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,5 +29,5 @@ jobs:
         uses: C-Naoki/zenn-qiita-sync@main
         with:
           qiita-token: ${{ secrets.QIITA_TOKEN }}
-          convert-commit-message: "🔄 auto: convert Zenn articles to Qiita articles"
-          qiitacli-commit-message: "🔄 auto: updated by qiita-cli"
+          convert-commit-message: "🔄 auto: synchronize qiita articles"
+          qiitacli-commit-message: "🔄 auto: update using qiita-cli"
